--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "es6-promise": "^4.2.8",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.0.0",
+    "toastr": "^2.1.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
